--- a/stabilizer/platformio.ini
+++ b/stabilizer/platformio.ini
@@ -1,7 +1,17 @@
-[env:uno]
+[common]
+build_flags = -Wall -Werror
+
+[env]
+check_tool = cppcheck, clangtidy
+check_flags =
+  cppcheck: --enable=all --inline-suppr --suppress=missingIncludeSystem -DPB_PROTO_HEADER_VERSION=40
+  clangtidy: --checks=-llvmlibc-implementation-in-namespace
+
+[env:ard]
 platform = atmelavr
-board = uno
 framework = arduino
-;[env:teensy41]
-;platform = teensy
-;board = teensy41
+board = uno
+build_flags = ${common.build_flags} -I src/generated
+src_filter = -<*> +<generated/> +<hub/>
+lib_deps = nanopb/Nanopb @ ^0.4.5
+extra_scripts = pre:generate_nanopb.py
