switch from I2C to serial

--- a/stabilizer/platformio.ini
+++ b/stabilizer/platformio.ini
@@ -1,17 +1,8 @@
 [common]
 build_flags = -Wall -Werror
 
-[env]
-check_tool = cppcheck, clangtidy
-check_flags =
-  cppcheck: --enable=all --inline-suppr --suppress=missingIncludeSystem -DPB_PROTO_HEADER_VERSION=40
-  clangtidy: --checks=-llvmlibc-implementation-in-namespace
-
-[env:ard]
+[env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
-build_flags = ${common.build_flags} -I src/generated
-src_filter = -<*> +<generated/> +<hub/>
-lib_deps = nanopb/Nanopb @ ^0.4.5
-extra_scripts = pre:generate_nanopb.py
+src_filter = -<*> +<uno/>
